discussion/cdt/36870/36870_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

debug tests: Add test for thread name

This patch adds SyncUtil.getThreadData to make it easy to get the thread
data from the gdb thread number.

Change-Id: I948a8b87cc3afa64f3d73de23d4ace12ef4c0c1a
Signed-off-by: Simon Marchi <simon.marchi@polymtl.ca>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Simon Marchi
Date: 2014-11-26 12:30:14.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: CI Bot
Date: 2014-11-26 12:30:19.000000000
Message: 
Patch Set 7:

Build Started https://hudson.eclipse.org/cdt/job/cdt-verify/1620/
----------------------------------------------------------------------------------------------------------------------
Author: CI Bot
Date: 2014-11-26 13:11:03.000000000
Message: 
Patch Set 7: Code-Review-1

Build Unstable 

https://hudson.eclipse.org/cdt/job/cdt-verify/1620/ : UNSTABLE
----------------------------------------------------------------------------------------------------------------------
Author: Marc-André Laperle
Date: 2014-11-26 15:55:06.000000000
Message: 
Patch Set 7:

This doesn't compile on Darwin (OSX) because it uses an optional part of POSIX (Advanced Realtime Threads)

http://stackoverflow.com/questions/8920803/pthread-and-gcc-compiling-issue-on-os-x

I'm not saying it should block this patch but something to be aware of. Also, pthread_setname_np only takes one argument (const char*), I'm assuming it only changes the name of the current thread?

In file included from MultiThread.cc:5:
In file included from ./Thread.h:13:
./ThreadPthreadTypes.h:9:9: error: unknown type name 'pthread_barrier_t'
typedef pthread_barrier_t ThreadBarrier;
        ^
In file included from MultiThread.cc:5:
In file included from ./Thread.h:44:
./ThreadPthread.h:24:9: error: use of undeclared identifier 'pthread_barrier_init'
        return pthread_barrier_init(barrier, NULL, count) == 0;
               ^
./ThreadPthread.h:29:9: error: use of undeclared identifier 'pthread_barrier_destroy'; did you mean
      'pthread_attr_destroy'?
        return pthread_barrier_destroy(barrier) == 0;
               ^~~~~~~~~~~~~~~~~~~~~~~
               pthread_attr_destroy
/usr/include/pthread.h:213:5: note: 'pthread_attr_destroy' declared here
int pthread_attr_destroy(pthread_attr_t *);
    ^
In file included from MultiThread.cc:5:
In file included from ./Thread.h:44:
./ThreadPthread.h:29:33: error: cannot initialize a parameter of type 'pthread_attr_t *'
      (aka '_opaque_pthread_attr_t *') with an lvalue of type 'ThreadBarrier *' (aka 'int *')
        return pthread_barrier_destroy(barrier) == 0;
                                       ^~~~~~~
/usr/include/pthread.h:213:42: note: passing argument to parameter here
int pthread_attr_destroy(pthread_attr_t *);
                                         ^
In file included from MultiThread.cc:5:
In file included from ./Thread.h:44:
./ThreadPthread.h:35:8: error: use of undeclared identifier 'pthread_barrier_wait'; did you mean
      'ThreadBarrierWait'?
        ret = pthread_barrier_wait(barrier);
              ^~~~~~~~~~~~~~~~~~~~
              ThreadBarrierWait
./ThreadPthread.h:32:12: note: 'ThreadBarrierWait' declared here
static int ThreadBarrierWait(ThreadBarrier *barrier)
           ^
./ThreadPthread.h:36:28: error: use of undeclared identifier 'PTHREAD_BARRIER_SERIAL_THREAD'
        return ret == 0 || ret == PTHREAD_BARRIER_SERIAL_THREAD;
                                  ^
./ThreadPthread.h:41:9: error: no matching function for call to 'pthread_setname_np'
        return pthread_setname_np(thread, name) == 0;
               ^~~~~~~~~~~~~~~~~~
/usr/include/pthread.h:475:5: note: candidate function not viable: requires 1 argument, but 2 were
      provided
int     pthread_setname_np(const char*);
        ^
7 errors generated.
----------------------------------------------------------------------------------------------------------------------
Author: Simon Marchi
Date: 2014-11-26 16:16:49.000000000
Message: 
Patch Set 7:

Thanks for testing Marc-André.

Since OS X's pthread is sufficiently different from Linux's pthread, we could make a version of the threading abstraction layer for OS X.

It seems like there are ways to implement pthread barriers quite easily: http://blog.albertarmea.com/post/47089939939/using-pthread-barrier-on-mac-os-x.

As for pthread_setname_np, it seems like the Hudson build machines are too old to have it anyway. The fallback is to use prctl(PR_SET_NAME, ...). The difference is that with glibc's pthread_setname_np, you can set the name of another thread (the first parameter).

I think we can just change the Thread.h interface so that a thread can only change its own name. This way, there will be a way to implement it on all platforms.
----------------------------------------------------------------------------------------------------------------------
